<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Animals GO</string>

    <!--
        PLUGINS
     -->
    <string-array name="plugins_list">
        <!-- CAMERA -->
        <item>com.thommil.animalsgo.gl.plugins.CameraBasic</item>
        <!-- PREVIEW -->
        <item>com.thommil.animalsgo.gl.plugins.Basic</item>
        <item>com.thommil.animalsgo.gl.plugins.Toon</item>
        <!-- UI -->
        <item>com.thommil.animalsgo.gl.plugins.UIBasic</item>
    </string-array>

    <!-- CAMERA -->
    <string name="plugins_camera_basic_name">Camera Basic</string>
    <string name="plugins_camera_basic_summary">...</string>

    <!-- PREVIEW -->
    <string name="plugins_basic_name">Basic</string>
    <string name="plugins_basic_summary">...</string>
    <string name="plugins_toon_name">Toon</string>
    <string name="plugins_toon_summary">...</string>

    <!-- UI -->
    <string name="plugins_ui_basic_name">UI Basic</string>
    <string name="plugins_ui_basic_summary">...</string>


    <!--
        PREFERENCES
     -->
    <string name="prefs_file_key">preferences</string>

    <!-- Camera -->
    <string name="prefs_camera">Camera</string>

    <!-- Camera quality -->
    <string name="prefs_camera_preview_quality_auto_title">Auto Preview quality : </string>
    <string name="prefs_camera_preview_quality_auto_summary">... </string>
    <string name="prefs_camera_preview_quality_title">Manual preview quality : </string>
    <string name="prefs_camera_preview_quality_summary">...</string>
    <string name="prefs_camera_preview_quality_dialog">Choose quality level :</string>
    <string-array name="prefs_camera_preview_quality_entries">
        <item>very low</item>
        <item>low</item>
        <item>medium</item>
        <item>high</item>
        <item>very high</item>
    </string-array>
    <string-array name="prefs_camera_preview_quality_entries_values">
        <item>very low</item>
        <item>low</item>
        <item>medium</item>
        <item>high</item>
        <item>very high</item>
    </string-array>
    <string name="prefs_camera_preview_quality_default">medium</string>


    <string name="prefs_camera_plugins_default_title">Default plugin</string>
    <string name="prefs_camera_plugins_default_title_summary">...</string>
    <string name="prefs_camera_plugins_default_dialog">Choose default plugin :</string>
    <string-array name="prefs_camera_plugins_default_entries">
        <item>Basic</item>
        <item>Toon</item>
    </string-array>
    <string-array name="prefs_camera_plugins_default_entries_values">
        <item>basic</item>
        <item>toon</item>
    </string-array>
    <string name="prefs_camera_plugins_default_default">basic</string>

    <string name="prefs_camera_plugins_enabled_title">Active plugins</string>
    <string name="prefs_camera_plugins_enabled_summary">...</string>


    <!--
        ERRORS
     -->
    <string name="error_camera_generic">An error has occured while using camera !</string>
    <string name="error_camera_not_found">Failed to find a suitable camera !</string>
    <string name="error_camera_not_supported">Camera2 not supported by device !</string>
    <string name="error_camera_timeout">Time out waiting to lock camera opening !</string>

    <string name="error_unsupported">Device not compliant !</string>


</resources>